--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sim City Clone</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="src/scene.js" defer></script>
+  <link rel="stylesheet" href="public/main.css">
   <style>
     body { margin: 0; }
-  </style>
+    </style>
 </head>
 <body>
   <div class="root-window">
     <div id="render-target"></div>
   </div>
+  <script type="module">
+    import { createScene } from './src/scene.js'
+
+    window.onload = () => {
+      window.scene = createScene();
+      window.scene.start();
+    }
+  </script>
 </body>
 </html>
